--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/button_color"/>
     <corners android:radius="12px"/>
+    <gradient
+        android:angle="135"
+        android:centerColor="@color/button_centre_color"
+        android:endColor="@color/button_end_color"
+        android:startColor="@color/button_start_color"
+        android:type="linear"/>
 </shape>
