--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#311B92</color>
-    <color name="colorPrimaryDark">#512DA8</color>
-    <color name="colorAccent">#64DD17</color>
+    <color name="colorPrimary">#163841</color>
+    <color name="colorPrimaryDark">#1e2a59</color>
+    <color name="colorAccent">#7d97d4</color>
     <color name="colorBackground">#F3EFF5</color>
 
-    <color name="list_item_header_text_color">#00796B</color>
+    <color name="list_item_header_text_color">#6200EA</color>
 
     <color name="base_font_color">#000000</color>
 
@@ -13,4 +13,15 @@
     <color name="button_text_color">#FFFFFF</color>
 
     <color name="fab_color">#EF6C00</color>
+
+    <!--Color gradient for the nav header-->
+    <color name="nav_header_end_color">#212121</color>
+    <color name="nav_header_centre_color">#37474F</color>
+    <color name="nav_header_start_color">#B0BEC5</color>
+
+
+    <!--Color gradient for buttons-->
+    <color name="button_end_color">#004D40</color>
+    <color name="button_centre_color">#00695C</color>
+    <color name="button_start_color">#00897B</color>
 </resources>
