--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,54 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
+<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/product_name"
-        style="@style/DetailHeaderStyle"
-        tools:text="@string/placeholder_product_name"
-        android:layout_alignParentTop="true"/>
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:gravity="center_horizontal"
+        android:padding="@dimen/list_item_view_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/product_image"
-        android:contentDescription="@string/content_desc_product_img"
-        android:layout_width="@dimen/detail_image_width_height"
-        android:layout_height="@dimen/detail_image_width_height"
-        tools:src="@drawable/carrots"
-        android:layout_below="@id/product_name"
-        android:layout_centerHorizontal="true"/>
+        <TextView
+            android:id="@+id/product_name"
+            style="@style/DetailHeaderStyle"
+            tools:text="@string/placeholder_product_name"
+            android:layout_alignParentTop="true"/>
 
-    <TextView
-        android:id="@+id/product_quantity"
-        tools:text="@string/product_quantity"
-        style="@style/DetailViewStyle"
-        android:layout_below="@id/product_image"/>
+        <ImageView
+            android:id="@+id/product_image"
+            android:contentDescription="@string/content_desc_product_img"
+            android:layout_width="@dimen/detail_image_width_height"
+            android:layout_height="@dimen/detail_image_width_height"
+            tools:src="@drawable/carrots"
+            android:layout_below="@id/product_name"
+            android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:id="@+id/product_price"
-        tools:text="@string/product_price"
-        style="@style/DetailViewStyle"
-        android:layout_below="@id/product_quantity"/>
+        <TextView
+            android:id="@+id/product_price"
+            tools:text="@string/product_price"
+            style="@style/DetailViewStyle"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/product_quantity_layout"/>
 
-    <SeekBar
-        android:id="@+id/product_price_level"
-        android:max="10"
-        android:verticalScrollbarPosition="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/product_price"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/product_quantity"
-        android:padding="@dimen/detail_item_view_padding"/>
+        <TextView
+            android:id="@+id/product_supplier"
+            tools:text="@string/product_supplier"
+            style="@style/DetailViewStyle"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/product_price"/>
 
-    <TextView
-        android:id="@+id/product_supplier"
-        tools:text="@string/product_supplier"
-        style="@style/DetailViewStyle"
-        android:layout_below="@id/product_price"/>
+        <TextView
+            android:id="@+id/product_order_more"
+            android:text="@string/order_product"
+            style="@style/DetailsButtonStyle"
+            android:layout_below="@id/product_supplier"
+            android:layout_alignParentEnd="true"/>
 
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/product_quantity_layout"
+            android:layout_below="@id/product_image"
+            android:layout_alignParentEnd="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/product_decrease"
+                style="@style/DetailsButtonStyle"
+                android:background="@drawable/minus_button_background"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="0dp"
+                android:text="-"/>
+
+            <TextView
+                android:id="@+id/product_quantity"
+                tools:text="@string/product_quantity"
+                style="@style/DetailViewStyle"/>
+
+            <TextView
+                android:id="@+id/product_increase"
+                style="@style/DetailsButtonStyle"
+                android:background="@drawable/plus_button_background"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="0dp"
+                android:text="+"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/delete_product"
+            style="@style/DetailsButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/product_order_more"
+            android:background="@drawable/button_delete_background"
+            android:text="@string/product_delete"/>
+
+    </RelativeLayout>
+</ScrollView>
