--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -5,6 +5,7 @@
     android:fillViewport="true"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
+    android:padding="@dimen/activity_horizontal_margin"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -15,7 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_margin="@dimen/activity_horizontal_margin"
         tools:context="com.example.android.productmanager.AddNewProductActivity">
 
         <EditText
@@ -25,7 +25,6 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:imeOptions="actionDone"
-            android:focusedByDefault="false"
             android:clickable="true"
             android:maxLines="1"
             android:layout_alignParentTop="true"
@@ -47,11 +46,20 @@
                 android:layout_height="wrap_content"
                 android:text="@string/set_price_text"/>
 
+            <TextView
+                style="@style/DetailViewStyle"
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/initial_price"/>
+
             <SeekBar
                 android:id="@+id/price_setter"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:progress="1"
+                android:max="2500"
                 android:thumb="@drawable/seekbar_thumb"/>
 
         </LinearLayout>
@@ -77,6 +85,8 @@
                 android:id="@+id/quantity_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:descendantFocusability="blocksDescendants"
                 android:gravity="center_vertical"
                 android:layout_margin="@dimen/list_item_view_padding"/>
 
@@ -85,6 +95,8 @@
                 android:id="@+id/unit_selector"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
+                android:focusable="false"
+                android:descendantFocusability="blocksDescendants"
                 android:gravity="center_vertical"
                 android:layout_margin="@dimen/list_item_view_padding"/>
 
@@ -141,7 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/set_category_layout"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="@string/add_new_product"/>
 
