--- a/app/src/main/res/layout/add_product_confirm_dialog.xml
+++ b/app/src/main/res/layout/add_product_confirm_dialog.xml
@@ -60,11 +60,13 @@
         <TextView
             android:id="@+id/yes_button"
             android:text="@string/yes_button_dialog_text"
+            android:padding="@dimen/activity_horizontal_margin"
             style="@style/ListItemButtonStyle"/>
 
         <TextView
             android:id="@+id/no_button"
             android:text="@string/no_button_dialog_text"
+            android:padding="@dimen/activity_horizontal_margin"
             style="@style/ListItemButtonStyle"/>
 
     </LinearLayout>
