--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -67,7 +67,7 @@
                 android:textStyle="bold"
                 android:layout_marginEnd="0dp"
                 android:layout_marginStart="0dp"
-                android:text="-"/>
+                android:text="@string/product_decrease"/>
 
             <TextView
                 android:id="@+id/product_quantity"
@@ -82,7 +82,7 @@
                 android:textStyle="bold"
                 android:layout_marginEnd="0dp"
                 android:layout_marginStart="0dp"
-                android:text="+"/>
+                android:text="@string/product_increase"/>
         </LinearLayout>
 
         <TextView
