--- a/app/src/main/res/layout/delete_product_yes_no_dialog.xml
+++ b/app/src/main/res/layout/delete_product_yes_no_dialog.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/yes_no_buttons"
@@ -8,20 +6,33 @@
     android:layout_height="wrap_content"
     android:layout_below="@id/product_supplier"
     android:layout_margin="@dimen/activity_horizontal_margin"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:gravity="center_horizontal">
 
     <TextView
-        android:id="@+id/yes_button"
-        android:text="@string/yes_button_dialog_text"
-        android:padding="@dimen/activity_horizontal_margin"
-        style="@style/ListItemButtonStyle"/>
+        android:id="@+id/title_view"
+        style="@style/DetailSubheaderStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"/>
 
-    <TextView
-        android:id="@+id/no_button"
-        android:text="@string/no_button_dialog_text"
-        android:padding="@dimen/activity_horizontal_margin"
-        style="@style/ListItemButtonStyle"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
+        <TextView
+            android:id="@+id/yes_button"
+            android:text="@string/yes_button_dialog_text"
+            android:padding="@dimen/activity_horizontal_margin"
+            style="@style/ListItemButtonStyle"/>
+
+        <TextView
+            android:id="@+id/no_button"
+            android:text="@string/no_button_dialog_text"
+            android:padding="@dimen/activity_horizontal_margin"
+            style="@style/ListItemButtonStyle"/>
+
+    </LinearLayout>
 </LinearLayout>
-
