--- a/app/src/main/res/layout-land/activity_add_new_product.xml
+++ b/app/src/main/res/layout-land/activity_add_new_product.xml
@@ -68,7 +68,7 @@
             android:id="@+id/set_quantity_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/set_price_layout"
+            android:layout_below="@+id/set_supplier_layout"
             android:orientation="horizontal">
 
             <TextView
@@ -106,9 +106,8 @@
             android:id="@+id/set_supplier_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/set_quantity_layout"
-            android:layout_above="@+id/set_category_layout"
+            android:layout_below="@id/name_edit_text"
+            android:layout_alignParentStart="true"
             android:orientation="horizontal"
             android:gravity="center_horizontal">
 
@@ -130,8 +129,8 @@
             android:id="@+id/set_category_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/set_quantity_layout"
-            android:layout_centerVertical="true"
+            android:layout_below="@id/name_edit_text"
+            android:layout_alignParentEnd="true"
             android:orientation="horizontal"
             android:gravity="center_horizontal">
 
@@ -149,13 +148,31 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/image_selector"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:src="@drawable/product_placeholder"/>
+
+        <TextView
+            style="@style/DetailsButtonStyle"
+            android:id="@+id/image_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:text="@string/choose_image"/>
+
         <TextView
             style="@style/DetailsButtonStyle"
             android:id="@+id/add_new_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="@string/add_new_product"/>
 
