--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -105,9 +105,10 @@
 
         <LinearLayout
             android:id="@+id/set_supplier_layout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/set_quantity_layout"
+            android:layout_alignParentEnd="true"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
@@ -127,9 +128,10 @@
 
         <LinearLayout
             android:id="@+id/set_category_layout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/set_supplier_layout"
+            android:layout_alignParentEnd="true"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
@@ -149,13 +151,30 @@
 
         <TextView
             style="@style/DetailsButtonStyle"
+            android:id="@+id/image_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/set_category_layout"
+            android:text="@string/choose_image"/>
+
+        <TextView
+            style="@style/DetailsButtonStyle"
             android:id="@+id/add_new_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/set_category_layout"
+            android:layout_below="@id/image_selector"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="@string/add_new_product"/>
+
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/set_quantity_layout"
+            android:layout_margin="@dimen/list_item_padding"
+            android:src="@drawable/product_placeholder"/>
 
     </RelativeLayout>
 </ScrollView>
