--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -170,11 +170,11 @@
 
         <ImageView
             android:id="@+id/product_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_below="@id/set_quantity_layout"
             android:layout_margin="@dimen/list_item_padding"
-            android:src="@drawable/product_placeholder"/>
+            android:src="@drawable/product_placeholder"
+            android:contentDescription="@string/content_desc_product_img"
+            style="@style/AddProductImageStyle"/>
 
     </RelativeLayout>
 </ScrollView>
