--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -17,6 +17,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@id/product_name"
         tools:src="@drawable/carrots"
+        android:layout_width="@dimen/image_width_height"
+        android:layout_height="@dimen/image_width_height"
         android:contentDescription="@string/content_desc_product_img"
         style="@style/ListItemViewStyle"/>
 
